Stable working model without any unique feature

--- a/Login.html
+++ b/Login.html
@@ -7,6 +7,9 @@
 <body>
 
 <div class="login-container">
+    <a href="index.html">
+        <img src="images/logo.png" alt="Logo" class="logo">
+    </a>
     <h2>Login</h2>
 
     <form id="loginForm">
@@ -18,6 +21,7 @@
     <p>Don't have an account? 
         <a href="Register.html">Register here</a>
     </p>
+    </div>
 </div>
 
 <script src="LoginJS.js"></script>
