--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>Community Recycling Marketplace</title>
     <link rel="stylesheet" href="HomeStyle.css">
 </head>
 <body>
 
+<!-- HEADER -->
 <header>
     <div class="header-right">
         <a href="Login.html" class="login-btn">Login / Register</a>
@@ -13,18 +15,19 @@
         <div class="menu">
             <button id="menuBtn">☰</button>
             <div class="dropdown" id="dropdownMenu">
-                <a href="AboutPage.html">About This Platform</a>
-                <a href="MarketPlace.html">Exchange Marketplace</a>
+                <a href="About.html" id="aboutLink">About This Platform</a>
+                <a href="Login.html">Exchange Marketplace</a>
             </div>
         </div>
     </div>
 </header>
 
+<!-- MAIN BRAND SECTION -->
 <main>
-    <h1>Community Recycling Marketplace</h1>
-    <p class="quote">
-        "Recycle smart. Reuse better. Build a sustainable tomorrow."
-    </p>
+    <div class="brand">
+        <img src="images/logo.png" alt="Logo" class="logo">
+        <h1 class="title">A Community Recycling Marketplace</h1>
+    </div>
 </main>
 
 <script src="HomeJS.js"></script>
