--- a/RecyclerDashboard.html
+++ b/RecyclerDashboard.html
@@ -8,9 +8,12 @@
 
 <!-- Navbar -->
 <nav class="navbar">
-    <div class="logo">Community Recycling Marketplace</div>
+    <div class="nav-left">
+        ReUse Mart
+    </div>
+
     <div class="nav-right">
-        <span id="welcomeRecycler"></span>
+        <span id="welcomeRecycler">Welcome</span>
         <button id="logoutBtn">Logout</button>
     </div>
 </nav>
