--- a/Register.html
+++ b/Register.html
@@ -7,6 +7,9 @@
 <body>
 
 <div class="login-container">
+    <a href="index.html">
+        <img src="images/logo.png" alt="Logo" class="logo">
+    </a>
     <h2>Register</h2>
 
     <form id="registerForm">
