--- a/RecyclerDashboard.html
+++ b/RecyclerDashboard.html
@@ -12,6 +12,12 @@
         ReUse Mart
     </div>
 
+    <div class="nav-center">
+        <span class="nav-link active">♻️ Recycle</span>
+        <span class="divider">|</span>
+        <span class="nav-link" onclick="goToReuse()">🔁 Reuse</span>
+    </div>
+
     <div class="nav-right">
         <span id="welcomeRecycler">Welcome</span>
         <button id="logoutBtn">Logout</button>
@@ -19,6 +25,8 @@
 </nav>
 
 <div class="dashboard">
+
+    <h2>Recycler Dashboard</h2>
 
     <!-- Overview Cards -->
     <div class="cards">
@@ -58,6 +66,33 @@
     </table>
 
 </div>
+
+<!-- SESSION + NAVIGATION SCRIPT -->
+<script>
+
+// Check session
+const loggedInUser = JSON.parse(localStorage.getItem("loggedInUser"));
+
+if (!loggedInUser || loggedInUser.role !== "recycler") {
+    window.location.href = "Login.html";
+}
+
+// Show recycler name
+document.getElementById("welcomeRecycler").innerText =
+    "Welcome, " + loggedInUser.name;
+
+// Logout
+document.getElementById("logoutBtn").addEventListener("click", function () {
+    localStorage.removeItem("loggedInUser");
+    window.location.href = "Login.html";
+});
+
+// Navigate to Reuse
+function goToReuse() {
+    window.location.href = "Reuse.html";
+}
+
+</script>
 
 <script src="RecycleDashJS.js"></script>
 </body>
