--- a/Register.html
+++ b/Register.html
@@ -18,14 +18,55 @@
         <input type="email" id="email" placeholder="Email" required>
         <input type="password" id="password" placeholder="Password" required>
         <input type="text" id="location" placeholder="Location (Area)" required>
-        
+
         <label>Select Role:</label>
         <select id="role" required>
             <option value="">Choose Role</option>
             <option value="user">User</option>
             <option value="recycler">Recycler</option>
         </select>
-        
+
+        <div id="recyclerOptions" style="display:none; margin-top:10px;">
+            <label>Select Materials You Recycle:</label>
+            <div id="recycleTypes" class="checkbox-grid">
+                <label class="check-item">
+                    <input type="checkbox" value="Plastic">
+                    <span>Plastic</span>
+                </label>
+                <label class="check-item">
+                    <input type="checkbox" value="Paper">
+                    <span>Paper</span>
+                </label>
+                <label class="check-item">
+                    <input type="checkbox" value="Glass">
+                    <span>Glass</span>
+                </label>
+                <label class="check-item">
+                    <input type="checkbox" value="Metal">
+                    <span>Metal</span>
+                </label>
+                <label class="check-item">
+                    <input type="checkbox" value="E-Waste">
+                    <span>E-Waste</span>
+                </label>
+                <label class="check-item">
+                    <input type="checkbox" value="Clothes">
+                    <span>Clothes</span>
+                </label>
+                <label class="check-item">
+                    <input type="checkbox" value="Cardboard">
+                    <span>Cardboard</span>
+                </label>
+                <label class="check-item">
+                    <input type="checkbox" value="Other">
+                    <span>Other</span>
+                </label>
+            </div>
+        </div>
+
+        <input type="hidden" id="latitude">
+        <input type="hidden" id="longitude">
+
         <button type="submit">Register</button>
     </form>
 
