Firebase Cloud Database trial

--- a/RecyclerDashboard.html
+++ b/RecyclerDashboard.html
@@ -86,6 +86,6 @@ function goToReuse() {
 }
 </script>
 
-<script src="RecycleDashJS.js"></script>
+<script type="module" src="RecycleDashJS.js"></script>
 </body>
 </html>
