--- a/UserDashboard.html
+++ b/UserDashboard.html
@@ -116,6 +116,6 @@ function goToReuse() {
 }
 </script>
 
-<script src="UserDashJS.js"></script>
+<script type="module" src="UserDashJS.js"></script>
 </body>
 </html>
