--- a/RecyclerDashboard.html
+++ b/RecyclerDashboard.html
@@ -8,9 +8,7 @@
 <body>
 
 <nav class="navbar">
-    <div class="nav-left">
-        ReUse Mart
-    </div>
+    <div class="nav-left">ReUse Mart</div>
 
     <div class="nav-center">
         <span class="nav-link active">♻️ Recycle</span>
@@ -47,22 +45,8 @@
         </div>
     </div>
 
-    <table id="recyclerTable">
-        <thead>
-            <tr>
-                <th>User</th>
-                <th>Type</th>
-                <th>Quantity</th>
-                <th>Unit</th>
-                <th>Date</th>
-                <th>Location</th>
-                <th>Distance (km)</th>
-                <th>Status</th>
-                <th>Action</th>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
+    <!-- NEW CARD GRID -->
+    <div class="card-grid" id="recyclerCardGrid"></div>
 
 </div>
 
