--- a/UserDashboard.html
+++ b/UserDashboard.html
@@ -8,9 +8,7 @@
 <body>
 
 <nav class="navbar">
-    <div class="nav-left">
-        ReUse Mart
-    </div>
+    <div class="nav-left">ReUse Mart</div>
 
     <div class="nav-center">
         <span class="nav-link active">♻️ Recycle</span>
@@ -44,19 +42,8 @@
 
     <button class="add-btn" id="openModal">+ Add Waste</button>
 
-    <table id="wasteTable">
-        <thead>
-            <tr>
-                <th>Type</th>
-                <th>Quantity</th>
-                <th>Unit</th>
-                <th>Date</th>
-                <th>Status</th>
-                <th>Action</th>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
+    <!-- NEW CARD GRID -->
+    <div class="card-grid" id="wasteCardGrid"></div>
 </div>
 
 <div class="modal" id="wasteModal">
