--- a/Reuse.html
+++ b/Reuse.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="nav-right">
-        <span id="welcomeReuse">Welcome</span>
+        <span>Welcome</span>
         <button id="logoutBtn">Logout</button>
     </div>
 </nav>
