--- a/About.html
+++ b/About.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>About - Community Recycling Marketplace</title>
+    <title>About - ReUse Mart</title>
     <link rel="stylesheet" href="HomeStyle.css">
 </head>
+
 <body>
 
 <header>
@@ -23,48 +24,103 @@
 
 <main class="about-page">
     <div class="about-container">
+
         <a href="index.html">
             <img src="images/logo.png" alt="Logo" class="logo">
         </a>
+
         <h1>About ReUse Mart</h1>
 
+        <h2>🌍 Who We Are</h2>
         <p>
-            Reuse Mart is a digital platform designed to connect households with nearby recyclers through an integrated online system. It enables users to list recyclable materials such as paper, plastic, glass, and metal, while allowing recyclers to view available listings and schedule pickups efficiently. Through structured interaction between users and recyclers, the platform simplifies the recycling process and promotes responsible waste management.
+            ReUse Mart is a community-driven recycling and reuse platform designed to connect individuals and recyclers within their local area. Our goal is simple — reduce waste, promote reuse, and make sustainable living easy and accessible for everyone.
+        </p>
+        <p>
+            We believe that small actions, when combined, create a powerful environmental impact.
         </p>
 
-        <h2>Our Objectives</h2>
+        <h2>♻️ What We Do</h2>
 
-        <ul class="objectives">
-            <li>To develop a digital platform that connects households with nearby scrap dealers and recyclers.</li>
-            <li>To make the recycling process simpler, structured, and more convenient for users.</li>
-            <li>To create awareness about recyclable materials and promote proper waste disposal practices.</li>
-            <li>To reduce landfill waste by encouraging recycling and reuse of materials.</li>
-            <li>To support responsible consumption and contribute towards a cleaner environment.</li>
+        <h3>Section</h3>
+        <p>
+            Users can list recyclable waste such as plastic, paper, glass, metal, e-waste, and more.
+            Verified recyclers within a 5 km radius can accept the request and collect the waste.
+        </p>
+
+        <p>This ensures:</p>
+        <ul>
+            <li>Faster pickups</li>
+            <li>Reduced transportation emissions</li>
+            <li>Proper waste management</li>
         </ul>
 
-        <h2>Project Contributions</h2>
+        <h3>Reuse Marketplace</h3>
+        <p>
+            Instead of throwing items away, users can post reusable items such as books, furniture, electronics, clothes, and more.
+        </p>
 
-        <ul class="objectives">
-            <li>Encourages recycling and reuse of materials.</li>
-            <li>Reduces environmental pollution.</li>
-            <li>Minimizes landfill waste.</li>
-            <li>Promotes sustainable lifestyle practices.</li>
-            <li>Supports circular economy initiatives.</li>
+        <p>Other users can:</p>
+        <ul>
+            <li>Request items</li>
+            <li>Claim free products</li>
+            <li>Purchase affordable second-hand goods</li>
         </ul>
 
-        <p class="sdg">
-            🌍 Aligned with Sustainable Development Goal 12 — Responsible Consumption & Production
+        <p>
+            This promotes a circular economy and reduces landfill waste.
+        </p>
+
+        <h2>💡 Our Vision</h2>
+        <p>To build a sustainable local ecosystem where:</p>
+        <ul>
+            <li>Waste is minimized</li>
+            <li>Reusable items get a second life</li>
+            <li>Communities actively participate in environmental protection</li>
+            <li>Technology bridges the gap between people and recyclers</li>
+        </ul>
+
+        <p>
+            We aim to make eco-friendly decisions the easiest choice.
+        </p>
+
+        <h2>🌎 Why It Matters</h2>
+        <p>
+            Every year, millions of tons of recyclable waste end up in landfills.
+        </p>
+
+        <p>By connecting communities directly with recyclers and encouraging reuse, ReUse Mart helps:</p>
+        <ul>
+            <li>Reduce carbon footprint</li>
+            <li>Lower landfill pressure</li>
+            <li>Encourage responsible consumption</li>
+            <li>Support local recycling businesses</li>
+        </ul>
+
+        <h2>🫱🏼‍🫲🏼 Join the Movement</h2>
+        <p>
+            Whether you're:
+        </p>
+        <ul>
+            <li>A household wanting to recycle responsibly</li>
+            <li>Someone looking to give items a second life</li>
+            <li>A recycler supporting environmental change</li>
+        </ul>
+
+        <p>
+            ReUse Mart welcomes you.
+        </p>
+
+        <p>
+            Together, we can create cleaner neighborhoods and a greener future.
         </p>
 
         <div class="cta">
-            <p>Have products to recycle?
-            <a href="Login.html" class="cta-btn">Click here to get started</a>
-            </p>
+            <a href="Login.html" class="cta-btn">Get Started Today</a>
         </div>
 
     </div>
 </main>
-
 <script src="HomeJS.js"></script>
+
 </body>
 </html>
