--- a/Reuse.html
+++ b/Reuse.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="nav-right">
-        <span>Welcome</span>
+        <span id="welcomeReuse">Welcome</span>
         <button id="logoutBtn">Logout</button>
     </div>
 </nav>
@@ -94,7 +94,7 @@ document.getElementById("welcomeReuse").innerText =
 // Logout
 document.getElementById("logoutBtn").addEventListener("click", function () {
     localStorage.removeItem("loggedInUser");
-    window.location.href = "Login.html";
+    window.location.href = "index.html";
 });
 
 // Smart redirect based on role
